cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_103.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_cfb64.c:35: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_cfb64.c:35:17: Write of unused value
33.                   n2l(iv, v0);
34.                   ti[0] = v0;
35.                   n2l(iv, v1);
                      ^
36.                   ti[1] = v1;
37.                   CAST_encrypt((CAST_LONG *)ti, schedule);
